hol-app-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: useless-webserver
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
    - name: web
      protocol: TCP
      port: 81
    - name: ssh
      protocol: TCP
      port: 2222

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: useless-webserver
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1 # tells deployment to run 1 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: useless-pvc
          persistentVolumeClaim:
            claimName: useless-pv-claim
      containers:
      - name: nginx
        image: jdtate101/kasten-app:latest
        resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        volumeMounts:
        - name: useless-pvc
          mountPath: /var/www/html
        lifecycle:
          postStart:
            exec:
              command: ["sh", "-c", "chown -R 999:999 /var/www/html"]
