pacman-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman-ingress
  namespace: pacman
spec:
  rules:
    - host: pacman.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pacman
                port:
                  number: 80
