virt-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2023-08-01T09:53:53Z"
  generation: 1
  name: kubevirt-manager-ingress
  namespace: kubevirt-manager
spec:
  ingressClassName: traefik
  rules:
  - host: kubevirt-manager.lab.home
    http:
      paths:
      - backend:
          service:
            name: kubevirt-manager
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.100.4
